# multimodal-retrieval-ops

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation_methodology.md  interview_notes.md  model_card.md  operations.md  release_checklist.md
reports/: baseline_retrieval_metrics.json  baseline_retrieval_report.md  clip_backend_report.md  clip_flickr8k_integration_metrics.json  clip_flickr8k_integration_report.md  clip_flickr8k_test_metrics.json  clip_flickr8k_test_report.md  clip_real_benchmark_metrics.json  clip_real_benchmark_report.md  clip_retrieval_metrics.json  clip_retrieval_report.md  contrastive_adapter_decision_memo.md  contrastive_adapter_failure_analysis.md  contrastive_adapter_failure_metrics.json  contrastive_adapter_metrics.json  contrastive_adapter_promotion.md  contrastive_adapter_training_report.md  dataset_inspection_report.md  demo_manifest_summary.md  faiss_flat_correctness_metrics.json  faiss_flat_correctness_report.md  faiss_hnsw_comparison_metrics.json  faiss_hnsw_comparison_report.md  flickr8k_dataset_report.md  hf_flickr8k_dataset_report.md  hnsw_reranking_decision.md  hnsw_reranking_metrics.json  hnsw_reranking_report.md  image_inference_service_metrics.json  image_inference_service_report.md  multimodal_baseline_metrics.json  multimodal_baseline_report.md  retrieval_monitoring_decision.md  retrieval_monitoring_metrics.json  retrieval_monitoring_report.md  retrieval_service_metrics.json  retrieval_service_report.md  schema_v2_migration_report.md  text_inference_service_metrics.json  text_inference_service_report.md
reports/portfolio/: release_1.0.0.json  release_1.0.0.md
scripts/: create_synthetic_service_artifacts.py  docker_smoke_test.sh
src/multimodal_retrieval_ops/: __init__.py  baseline_index.py  benchmark.py  cli.py  config.py  (+32 more)
src/multimodal_retrieval_ops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_milestone_eight_a.py  test_milestone_eight_b.py  test_milestone_eleven_a.py  test_milestone_eleven_a_1.py  test_milestone_five.py  test_milestone_four.py  test_milestone_nine_a.py  test_milestone_nine_b.py  test_milestone_one.py  test_milestone_seven_a.py  test_milestone_seven_b.py  test_milestone_seven_c.py  test_milestone_six.py  test_milestone_six_five.py  test_milestone_ten_a.py  test_milestone_three.py  test_milestone_twelve_a.py  test_milestone_two.py  test_smoke.py
(+16 files in other folders)
