[project]
name = "multimodal-retrieval-ops"
version = "0.1.0"
description = "Production-style image-text retrieval system with CLIP-style embeddings, contrastive fine-tuning, FAISS search, reranking, evaluation, FastAPI serving, and monitoring."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
multimodal-retrieval-ops = "multimodal_retrieval_ops.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
clip = ["Pillow>=10", "torch>=2.2", "transformers>=4.40"]
hfdata = ["datasets>=3.0", "Pillow>=10"]
faiss = ["faiss-cpu>=1.8"]
serve = [
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.30,<0.35",
    "httpx>=0.27,<0.28",
    "anyio>=4.4,<4.10",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
