[project]
name = "multimodal-retrieval-ops"
version = "1.0.0"
description = "Reproducible image-text retrieval evaluation, FAISS serving, and privacy-safe monitoring."
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Akshaj Kashyap"}]

[project.urls]
Repository = "https://github.com/AkshajKashyap/multimodal-retrieval-ops"
Documentation = "https://github.com/AkshajKashyap/multimodal-retrieval-ops/tree/main/docs"

[project.scripts]
multimodal-retrieval-ops = "multimodal_retrieval_ops.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
train = ["torch>=2.2"]
clip = ["Pillow>=10", "torch>=2.2", "transformers>=4.40"]
hfdata = ["datasets>=3.0", "Pillow>=10"]
faiss = ["faiss-cpu>=1.8"]
serve = [
    "Pillow>=10,<13",
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.30,<0.35",
    "httpx>=0.27,<0.28",
    "anyio>=4.4,<4.10",
    "python-multipart>=0.0.18,<0.1",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
